# kaiji-rrps-ai

./: README.md  contributions.md  heatmap.py  main.py  manual_rps_example.py  pyproject.toml  static_100000_0.999.pickle  test_env.py  testing_russell.py
analysis/: README.md  dqn.py  monty_hall_100000_0.999.pickle  static.ipynb  static.py  tabular_nav.py
analysis/compare_base/: README.md  compare_base.py  compare_base_eval.py  compare_base_train.py  train_times.json
enviroment_dynamic/: rrps_gym.py
enviroment_static/: Q_learn.py  rrps_gym.py
environment/: move.py  player.py  rps_gym.md  rps_gym.py  test_env.py  vis_rps.py
environment_core/: matchup_table.py  move.py  player.py  rps_gym.py  vis_rps.py
environment_core_dep/: rps_gym.py
environment_dqn_nav/: Q_learn.py  grid_view.py  rrps_gym.py
environment_dynamic/: grid_view.py  rrps_gym.py
environment_petting_zoo/: __init__.py  play_trained_q.py  random_rollout.py  rrps_pz.py  train_independent_q.py  train_shared_q.py
environment_static/: Q_learn.py  _Q_learn.py  rrps_gym.py
environment_tabular_nav/: Q_learn.py  rps_gym.py  vis_rps.py
example/: mdp_gym.py  vis_gym.py
gym_core/: Q_learn.py  challenge_logic.py  challenge_table.py  info.py  matchup_dict.py  matchup_table.py  observation.py  player.py  rrps_gym.py  visualizer.py
rock_paper_scissors/: game.py
rrps_core/: Q_learn.py  cards.py  challenge_table.py  info.py  matchup_dict.py  observation.py  reward_config.py  rrps_gym.py  visualizer.py
rrps_core/types/: info.py  (+4 more)
simulated_environment/: move.py  player.py  rps_gym.py  simulation.py
(+1 files in other folders)
