[project]
name = "kaiji-rrps-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pandera>=0.30.1",
    "pettingzoo>=1.25.0",
    "pygame>=2.6.1",
    "pygame-menu>=4.5.2",
    "tqdm>=4.67.3",
]
